# Adel

./: .gitignore  Toolchain-RaspberryPi.cmake
arbotix/testDyn/: CMakeLists.txt  CMakeLists.txt.back
arbotix/testDyn/libopenframeworksarduino/: CMakeLists.txt  CMakeLists.txt~
arbotix/testDyn/src/: ArduinoTest.h  PlaybackMovements.cpp
dev/helloworld/: CMakeLists.txt
dev/helloworld/src/: main.cpp
of/arduinoOssiaController/: CMakeLists.txt  readme.txt
of/arduinoOssiaController/src/: arduinoController.cpp  arduinoController.h  ofApp.cpp  ofApp.h  servo.cpp  servo.h
rpi/: install.txt
